# pytifex

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: codeql.yml  pylint.yml  python-package.yml
code/: agent.py  code_metrics.py  comprehensive_eval.py  config.py  github_issues.py  main.py  oracle.py  patterns.py  pipeline.py  prompts.py  run_checkers.py  scoring.py  static_tier4.py
code/generated_examples/2026-04-04_20-17-09/: results.json
code/generated_examples/2026-04-04_20-17-09/source_files/: match-typevartuple-never.py  union-callable-list-none.py  walrus-genexp-later-access.py  walrus-newtype-conditional-comprehension.py
code/generated_examples/2026-04-04_20-17-09/tests/callable-generic-protocol-type-init/: targeted_tests.py  tier1_0_full_source.py
code/generated_examples/2026-04-04_20-17-09/tests/paramspec-type-self-classmethod/: targeted_tests.py  tier1_0_full_source.py
code/generated_examples/2026-04-04_20-17-09/tests/typeguard-mutation-divergence-refined/: tier1_0_full_source.py
code/generated_examples/2026-04-04_20-17-09/tests/walrus-newtype-conditional-comprehension/: targeted_tests.py
docs/: _quarto.yml  architecture.qmd  bug-mining.qmd  checkers.qmd  evaluation.qmd  getting-started.qmd  index.html  index.qmd  installation.qmd  patterns.qmd  style.css  usage.qmd
docs/_book/: architecture.html  bug-mining.html  checkers.html  evaluation.html  getting-started.html  index.html  installation.html  patterns.html  search.json  usage.html
docs/_book/site_libs/bootstrap/: bootstrap-7e308b8ce3012a73bca8c74784667eac.min.css
docs/docs/: architecture.html  bug-mining.html  checkers.html  evaluation.html  getting-started.html  index.html  installation.html  patterns.html  search.json  usage.html
docs/docs/site_libs/bootstrap/: bootstrap-209983a10c761a733e201db9805f6b0a.min.css
src/pytifex/: agent.py  checker_claim_verification.py  comprehensive_eval.py  eval.py  generate_json.py  hypothesis_tier2.py  main.py  oracle.py  pipeline.py  prompts.py  rederive_statuses.py  run_checkers.py  scoring.py  source_analysis.py  static_tier4.py  targeted_tests.py  test_checker_parsing.py  test_eval_validation.py
src/pytifex/generated_examples/2026-04-04_20-17-09/: evaluation_comprehensive.json
src/pytifex/generated_examples/2026-04-04_20-17-09/source_files/: any-assert-never.py  walrus-self-class-context.py
src/pytifex/generated_examples/2026-04-04_20-17-09/tests/match-typevartuple-never/: targeted_tests.py
src/pytifex/generated_examples/2026-04-04_20-17-09/tests/typeguard-mutation-divergence-refined/: targeted_tests.py
src/pytifex/generated_examples/2026-04-04_20-17-09/tests/union-callable-list-none/: targeted_tests.py
src/pytifex/generated_examples/2026-04-07_14-10-11/: evaluation_comprehensive.json  results.json
src/pytifex/generated_examples/2026-04-07_14-10-11/source_files/: func-name-on-callable-divergence.py  newtype-numpy-arithmetic.py  protocol-any-contravariance-refined.py  typeddict-unpack-total-inheritance.py  typeguard-list-complex-init.py
src/pytifex/generated_examples/2026-04-07_14-10-11/tests/func-name-on-callable-divergence/: targeted_tests.py
src/pytifex/generated_examples/2026-04-07_14-10-11/tests/protocol-any-contravariance-refined/: targeted_tests.py  tier1_1_try_body_0_L70.py
src/pytifex/generated_examples/2026-04-07_14-10-11/tests/self-generic-arithmetic/: tier1_0_full_source.py
src/test_new_v/: divergence_1.py  divergence_2.py  divergence_3.py  example_1.py  example_2.py  example_3.py  gemini_v2.py  type_checker_examples.json
src/test_new_v/generated_examples_one/: disagreement_ex_1.py  disagreement_ex_2.py  disagreement_ex_3.py
src/test_new_v/generated_tests/: disagreement_1.py
(+7 files in other folders)
