[project]
name = "pytifex"
version = "0.1.5"
description = "Automated mutation-based differential testing for Python type checkers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Benedek Kaibas" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "mypy==1.19.0",
    "pyrefly==0.44.2",
    "zuban==0.3.0",
    "ty==0.0.1-alpha.32",
]

[project.scripts]
pytifex = "pytifex.main:main"

[project.urls]
Homepage = "https://github.com/benedekaibas/pytifex"
Documentation = "https://benedekaibas.github.io/pytifex/docs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pylint.format]
max-line-length = 120

[tool.pylint.main]
fail-under 8.0
disable = [
    "C0114",  # missing module docstring
    "C0115",  # missing class docstring
    "C0116",  # missing function docstring
]
