[project]
name = "pytifex"
version = "0.1.5"
description = "Automated mutation-based differential testing for Python type checkers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Benedek Kaibas" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "mypy==1.19.0",
    "pyrefly==0.44.2",
    "zuban==0.3.0",
    "ty==0.0.1-alpha.32",
]

[project.scripts]
pytifex = "pytifex.main:main"

[project.urls]
Homepage = "https://github.com/benedekaibas/pytifex"
Documentation = "https://benedekaibas.github.io/pytifex/docs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pylint.format]
max-line-length = 120

[tool.pylint.main]
fail-under 8.0
disable = [
    "C0114",  # missing module docstring
    "C0115",  # missing class docstring
    "C0116",  # missing function docstring
    "C0301",  # disable line length warning
    "C0305",  # trailing-newlines
    "C0411",  # wrong-import-order
    "C0415",  # import-outside-toplevel
    "R0801",  # duplicate-code
    "R0902",  # too-many-instance-attributes
    "R0911",  # too-many-return-statements
    "R0912",  # too-many-branches
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
    "R0915",  # too-many-statements
    "R0917",  # too-many-positional-arguments
    "R1702",  # too-many-nested-blocks
    "W0611",  # unused-import
    "W0613",  # unused-argument
    "W0718",  # broad-exception-caught
    "W1514",  # unspecified-encoding
    "E0601",
]

